Resolved scrollbar color issue and added text color variable

--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -2,33 +2,39 @@
 :root {
   --color-bg-left: #effafb;
   --color-bg-right: #f5fff7; 
+  --color-text: #333
 }
 /*
 @media (prefers-color-scheme: dark) {
   :root {
     --color-bg-left: #103D42;
     --color-bg-right: #003d0d; 
+    --color-text: #ddd;
   }
 }
 */
 
+* {
+  box-sizing: border-box;
+  color: var(--color-text);
+}
 
 /* Custom Scrollbar */
 html {
   scrollbar-width: thin;
-  scrollbar-color: #555 transparent;
+  scrollbar-color: #bbb var(--color-bg-right);
 }
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 12px;
 }
-::-webkit-scrollbar-track {
-  background: var(--color-bg-right);
+body::-webkit-scrollbar-track {
+  background-color: var(--color-bg-right);
 }
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background-color: #bbb;
   border: 3px solid var(--color-bg-right);
   border-radius: 8px;
 }
-::-webkit-scrollbar-corner {
+body::-webkit-scrollbar-corner {
   background-color: var(--color-bg-right);
 }
