--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -1,7 +1,8 @@
 .body {
+  margin: 0;
   min-height: 100vh;
   width: 100%;
-  color: #333;
   overflow: auto;
-  background-image: linear-gradient(to right, var(--color-bg-left), var(--color-bg-right));
+  background: linear-gradient(to right, var(--color-bg-left), var(--color-bg-right));
+  background-color: var(--color-bg-right);
 }
